# bedrock-model-router

./: .env.example  .gitignore  README.md  docker-compose.yml
.codex/: CODEX_TASKS.md  START_HERE.md
backend/: Dockerfile  pyproject.toml
backend/app/: bedrock_client.py  main.py  models.py  settings.py
backend/tests/: test_api.py  test_model_clients.py
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT_NOTES.md  BEDROCK_NOTES.md  LOCAL_DEVELOPMENT.md  MILESTONES.md  PROJECT_BRIEF.md
docs/architecture/: LLM_MEMORY_ARCHITECTURE_NOTES.md
docs/future-phases/: PHASE_X_MEMORY_LAYER_DYNAMODB_PGVECTOR.md
docs/testing/: AWS_LOCAL_TESTING_THREE_LAYER.md  LAYER1_TO_DO.md  LAYER2_TO_DO.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.ts
frontend/src/components/: ModelSelector.tsx
infra/terraform/: README.md  alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  variables.tf
scripts/: smoke_api.sh  smoke_bedrock_api.sh  smoke_bedrock_backend.sh  smoke_compose_backend.sh
