[project]
name = "bedrock-model-router-backend"
version = "0.1.0"
description = "FastAPI backend for routing chat requests to Amazon Bedrock."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.34.0",
    "pydantic-settings>=2.4.0",
]

[tool.uvicorn]
factory = false
